--- a/site-institucional/index.html
+++ b/site-institucional/index.html
@@ -52,7 +52,9 @@
 
         <!-- IMAGEM INICIAL -->
         <div id='home'>
-            
+            <div class="imagem-home">
+
+            </div>
         </div>
 
         <!-- SEÇÂO SOBRE A EMPRESA -->
