--- a/site-institucional/index.html
+++ b/site-institucional/index.html
@@ -102,9 +102,14 @@
 
         <!-- SEÇÃO SOBRE O PROJETO -->
         <section id='section-projeto' class='section'>
-            <h2 class='section-title'>NOSSO PROJETO</h2>
+            <div class="section-intro">
+                <h2 class='section-title'>NOSSO PROJETO</h2>
 
-            <p class='description'>O (nome do projeto) surge com a missão de ligar técnologia e informação para o sistema metroviário, assegurando que dados importantes sejam compartilhados para seus usuários, prestando serviço de qualidade e eficiência e agregando benefício para tomada de decisões. A excelencia do nosso serviço é dada com a funcionalidade de sensores para com fim agregar valores para atingir nosso objetivo principal, desenvolver soluções informatizadas para empresas de pequeno, médio e grande porte.</p>
+                <p class='description'>O (nome do projeto) surge com a missão de ligar técnologia e informação para o sistema metroviário, assegurando que dados importantes sejam compartilhados para seus usuários, prestando serviço de qualidade e eficiência e agregando benefício para tomada de decisões. A excelencia do nosso serviço é dada com a funcionalidade de sensores para com fim agregar valores para atingir nosso objetivo principal, desenvolver soluções informatizadas para empresas de pequeno, médio e grande porte.</p>
+            </div>
+            <div class="section-image">
+
+            </div>
         </section>
 
         <!-- SEÇÃO SOBRE A EQUIPE -->
