--- a/site-institucional/index.html
+++ b/site-institucional/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Synergy</title>
+
+    <link rel="shortcut icon" href="img/logo-simbolo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="css/grid-layout-index.css">
     <link rel="stylesheet" href="css/menu-style.css">
@@ -25,9 +27,10 @@
         <nav id='nav-menu'>
 
             <div id='div-logo-menu'>
-                <!-- <h1>
-                    <img src="" alt="logo da empresa" id='logo-menu'>
-                </h1> -->
+                <h1>
+                    <img src="img/logo-simbolo.png" alt="logo da empresa" id='logo-menu'>
+                    <h2>SYNERGY</h2>
+                </h1> 
             </div>
 
             <ul id='menu-site' class='menu'>
@@ -303,7 +306,7 @@
 
                     <div class="name-membro">
                         <h3 class="name">Wellington Pereira</h3>
-                        <p class="funtion">Monstro Sagrado</p>
+                        <p class="funtion">Desenvolvedor</p>
                     </div>
 
                     <div class="social-medias">
