--- a/site-institucional/index.html
+++ b/site-institucional/index.html
@@ -55,8 +55,12 @@
 
         <!-- IMAGEM INICIAL -->
         <div id='home'>
+            <div class="section-intro">
+                <h2 class='section-title'>SYNERGY</h2>
+                <p class='description'>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <button href="#section-empresa" class='menu-link'>VER MAIS</button>
+            </div>
             <div class="imagem-home">
-
             </div>
         </div>
 
@@ -168,7 +172,7 @@
                 <div class="div-membro">
                     <div class="photo-membro">
                         <div class='img-photo-membro'>
-                            <img src="img/sasori.jpg" alt="Foto de Christian Raphael" class='img-membro'>
+                            <img src="img/undraw_male_avatar_323b.png" alt="Foto de Christian Raphael" class='img-membro'>
                         </div>
                     </div>
 
@@ -201,7 +205,7 @@
                 <div class="div-membro">
                     <div class="photo-membro">
                         <div class='img-photo-membro'>
-                            <img src="img/itachi.png" alt="Foto de Gustavo Henrique" class='img-membro'>
+                            <img src="img/undraw_male_avatar_323b.png" alt="Foto de Gustavo Henrique" class='img-membro'>
                         </div>
                     </div>
 
@@ -234,7 +238,7 @@
                 <div class="div-membro">
                     <div class="photo-membro">
                         <div class='img-photo-membro'>
-                            <img src="img/konan.png" alt="Foto de Larissa Custodio" class='img-membro'>
+                            <img src="img/undraw_female_avatar_w3jk.png" alt="Foto de Larissa Custodio" class='img-membro'>
                         </div>
                     </div>
 
@@ -267,7 +271,7 @@
                 <div class="div-membro">
                     <div class="photo-membro">
                         <div class='img-photo-membro'>
-                            <img src="img/kisame.png" alt="Foto de Lucas Matheus" class='img-membro'>
+                            <img src="img/undraw_male_avatar_323b.png" alt="Foto de Lucas Matheus" class='img-membro'>
                         </div>
                     </div>
 
@@ -300,7 +304,7 @@
                 <div class="div-membro">
                     <div class="photo-membro">
                         <div class='img-photo-membro'>
-                            <img src="img/nagato.png" alt="Foto de Wellington Pereira" class='img-membro'>
+                            <img src="img/undraw_male_avatar_323b.png" alt="Foto de Wellington Pereira" class='img-membro'>
                         </div>
                     </div>
 
