Simulador linkado ao site

--- a/site-institucional/index.html
+++ b/site-institucional/index.html
@@ -42,6 +42,7 @@
             </ul>
 
             <ul id='menu-login' class='menu'>
+                <li class='item-menu'><a href="../simulador/simuladorFinanceiro.html" class='page-link active'>SIMULADOR</a> </li>
                 <li class='item-menu'><a href="#modal-login" class='page-link active'>LOGIN</a> </li>
                 <li class='item-menu menu-button'> <a href="#" class='page-link'>CADASTRO</a> </li>
             </ul>
@@ -112,7 +113,7 @@
             <div class="section-intro">
                 <h2 class='section-title'>NOSSO PROJETO</h2>
 
-                <p class='description'>O (nome do projeto) surge com a missão de ligar técnologia e informação para o sistema metroviário, assegurando que dados importantes sejam compartilhados para seus usuários, prestando serviço de qualidade e eficiência e agregando benefício para tomada de decisões. A excelencia do nosso serviço é dada com a funcionalidade de sensores para com fim agregar valores para atingir nosso objetivo principal, desenvolver soluções informatizadas para empresas de pequeno, médio e grande porte.</p>
+                <p class='description'>O Flow surge com a missão de ligar técnologia e informação para o sistema metroviário, assegurando que dados importantes sejam compartilhados para seus usuários, prestando serviço de qualidade e eficiência e agregando benefício para tomada de decisões. A excelencia do nosso serviço é dada com a funcionalidade de sensores para com fim agregar valores para atingir nosso objetivo principal, desenvolver soluções informatizadas para empresas de pequeno, médio e grande porte.</p>
 
                 <div class="image-intro"></div>
             </div>
