Correção de erros

--- a/site-institucional/index.html
+++ b/site-institucional/index.html
@@ -58,7 +58,7 @@
         <div id='home'>
             <div class="section-intro">
                 <h2 class='section-title'>SYNERGY</h2>
-                <p class='description'>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <p class='description'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos totam minus ipsa necessitatibus temporibus consequuntur numquam, aliquam iste velit perspiciatis natus repudiandae voluptates veniam. Eaque corrupti itaque vero quisquam possimus?</p>
                 <button href="#section-empresa" class='menu-link'>VER MAIS</button>
             </div>
             <div class="imagem-home">
@@ -72,7 +72,7 @@
             </div>
 
             <div class="section-intro">
-                <h2 class='section-title'>SOBRE A SINERGY</h2>
+                <h2 class='section-title'>SOBRE A SYNERGY</h2>
 
                 <p class='description'>A Sinergy nasceu no ano de 2020 através de um projeto financiado pela Faculdade Bandtec com o propósito de construir soluções em técnologia para órgaos e empresas em diversificados ramos, utilizando para isso, o que há de mais novo ou consolidado no mercado de desenvolvimento em T.I.</p>
             </div>
