--- a/site-institucional/index.html
+++ b/site-institucional/index.html
@@ -443,7 +443,39 @@
 
     <!-- RODAPÉ -->
     <footer id='footer'>
+        <div class='footer-topic'>
+            <ul class='list-sections'>
+                <h3>Sobre Nós</h3>
+                <li>Nossa empresa</li>
+                <li>Nossa equipe</li>
+                <li>Entre em contato</li>
+            </ul>
+        </div>
 
+        <div class='footer-topic'>
+            <ul class='list-sections'>
+                <h3>Nosso Projeto</h3>
+                <li>Sobre a idéia</li>
+                <li>Simulador financeiro</li>
+                <li>Login / Cadastro</li>
+            </ul>
+        </div>
+
+        <div class='footer-topic'>
+            <ul class='list-sections'>
+                <h3>Nos siga</h3>
+                <li class='li-footer-media'>
+                    <a href="#">
+                        <img src="img/facebook.svg" alt="Facebook" class='social-media-icon'>
+                    </a>
+                </li>
+                <li class='li-footer-media'>
+                    <a href="#">
+                        <img src="img/linkedin.svg" alt="Linkedin" class='social-media-icon'>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </footer>
 
     <script src="js/menu-animation.js"></script>
