--- a/simulador/simuladorFinanceiro.html
+++ b/simulador/simuladorFinanceiro.html
@@ -11,7 +11,7 @@
     <div id='Simulador'>
     
     <h2 style='color: rgb(36, 36, 36); font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;'>DESCUBRA QUAL SERÁ O SEU RETORNO AO UTILIZAR NOSSA PLATAFORMA</h2><br>
-
+<!-- lucas esteve aqui -->
 
     <span style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Preencha o campo abaixo com o seu lucro mensal e clique em uma linha do metrô de São Paulo de sua preferência</span><br><br>
     
